--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,5 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.telegram', name: 'telegrambots', version: '4.4.0.1'
+    compile group: 'org.telegram', name: 'telegrambotsextensions', version: '4.4.0.1'
 }
